@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1003 2013/11/22 14:37:22 ryoon Exp $
+# $NetBSD: Makefile,v 1.1004 2013/12/07 09:09:31 obache Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -655,7 +655,6 @@ SUBDIR+=	ruby-htmlsplit
 SUBDIR+=	ruby-http-cookie
 SUBDIR+=	ruby-http_parser.rb
 SUBDIR+=	ruby-http_router
-SUBDIR+=	ruby-httpclient
 SUBDIR+=	ruby-innate
 SUBDIR+=	ruby-jekyll
 SUBDIR+=	ruby-journey
